tests/paczka1/small_fuzzy/91351647.err
Error in line 3: mAvQLK9B S695 68,9
Error in line 8: KkZ S207 90,8
